--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/Simba-7.jpg);
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/simba.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
